--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -8,19 +8,22 @@
 <body>
 	<h1>Design your taco!</h1>
 	<img th:src="@{/images/TacoCloud.png}" />
-	<form method="POST">
+	<form method="POST" th:object="${design}">
 		<div class="grid">
+			<span class="validationError"
+				th:if="${#fields.hasErrors('ingredients')}"
+				th:errors="*{ingredients}">Ingredient Error</span>
 			<div class="ingredient-group" id="wraps">
 				<h3>Designate your wrap:</h3>
 				<div th:each="ingredient : ${wrap}">
-					<input name="ingredients" type="checkbox"
+					<input name="ingredients" type="checkbox" th:field="*{ingredients}"
 						th:value="${ingredient.id}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 			<div class="ingredient-group" id="proteins">
 				<h3>Pick your protein:</h3>
 				<div th:each="ingredient : ${protein}">
-					<input name="ingredients" type="checkbox"
+					<input name="ingredients" type="checkbox" th:field="*{ingredients}"
 						th:value="${ingredient.id}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
@@ -49,8 +52,11 @@
 		</div>
 		<div>
 			<h3>Name your taco creation:</h3>
-			<input type="text"  /> <br />
-			<!-- button>Submit your taco</button-->
+			<input type="text" th:field="*{name}" /> <br /> <span
+				th:text="${#fields.hasErrors('name')}">XXX</span> <span
+				class="validationError" th:if="${#fields.hasErrors('name')}"
+				th:errors="*{name}">Name Error</span> <br />
+			<button>Submit your taco</button>
 		</div>
 	</form>
 </body>
