--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -6,7 +6,11 @@
 </head>
 
 <body>
-	<form method="POST" th:action="@{/orders}" th:object="${order}">
+	<form method="POST" th:action="@{/logout}" id="logoutForm">
+		<input type="submit" value="Logout"/>
+	</form>
+
+	<form method="POST" th:action="@{/orders}" th:object="${order}" id="orderForm">
 		<h1>Order your taco creations!</h1>
 		<img th:src="@{/images/TacoCloud.png}" />
 		<h3>Your tacos in this order:</h3>
@@ -54,6 +58,7 @@
 			class="validationError" th:if="${#fields.hasErrors('ccCVV')}"
 			th:errors="*{ccCVV}">CC Num Error</span> <br /> <input type="submit"
 			value="Submit order" />
+		<input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
 	</form>
 </body>
 </html>
