--- a/taco-web-ui/src/app/app.component.html
+++ b/taco-web-ui/src/app/app.component.html
@@ -1,7 +1,7 @@
 <taco-header></taco-header>
 
 <div class="content">
-    <!-- router-outlet></router-outlet-->
+    <router-outlet></router-outlet>
 </div>
 
 <taco-footer></taco-footer>
