Add cart functionality in design page including navigation

--- a/taco-web-ui/src/app/taco-header/taco-header.component.html
+++ b/taco-web-ui/src/app/taco-header/taco-header.component.html
@@ -15,7 +15,7 @@
       <div class="topbaritem" style="font-size: 17pt;">
         <a [routerLink]="['cart']" class="plainlink">
           <img src="assets/cart.png" align="center" />
-          <!-- {{cart.getItemsInCart().length * 4.99 | currency}}-->
+          <{{cart.getItemsInCart().length * 4.99 | currency}}>
         </a>
       </div>
     </div>
